site/include/main.css
body {
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    background-color: #181818;
    color: #dddddd;
}

div.main {
    text-align: center;
}

/* ========================= */
/*          toolbar          */
/* ========================= */

div.toolbar {
    height: 50px;
    background-color: #646464;
    border: 1px solid #9b9b9b;
    border-radius: 10px;
}

div.toolbarsub {
    width: 100%;
    margin-left: auto;
    margin-right: auto;
    text-align: center;
}

div.toolbarbutton {
    display: inline-block;
    margin-right: -5px;
    vertical-align: top;
    padding: 15px;
    width: 100px;
    background-color: #d1d1d1;
    color: #181818;
}

div.username {
    display: inline-block;
    margin-right: -5px;
    vertical-align: top;
    padding: 15px;
    min-width: 100px;
}

/* ========================= */
/*           posts           */
/* ========================= */

div.post {
    margin-left: auto;
    margin-right: auto;
    margin-top: 8px;
    margin-bottom: 8px;
    width: 400px;
    height: auto;
    padding: 4px 4px;
    background-color: #383838;
    border: 5px solid #646464;
    border-radius: 10px;
}

img.postimg {
    display: block;
    max-width: 100%;
    max-height: 348px;
    margin-left: auto;
    margin-right: auto;
}

div.postdetails {
    color: #999999;
    font-size: 14px;
}

button.likebutton {
    background-color: transparent;
    border: none;
    color: white;
    padding: 0px;
    text-align: center;
    font-size: 22px;
    text-decoration: none;
    display: inline-block;
}

button.likebutton:hover {
    color: lightcoral;
}
button.disabled, button.disabled:hover {
    color: lightgrey;
}
button.likeDbutton {
    color: firebrick;
}

button.deletepost {
    width: 70px;
    margin-bottom: 6px;
}

div.comments {
    border-top: 8px solid #222222;
}
div.commentdetails {
    color: #777777;
    font-size: 10px;
}
div.commenttext {
    color: #cccccc;
    font-size: 14px;
    margin-bottom: 10px;
}
textarea.commentinput {
    max-width: 96%;
    width: 96%;
    background-color: #777777;
    color: #ffffff;
    border: 4px solid #666666;
    border-radius: 4px;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    font-size: 14px;
    padding: 3px;
}
textarea.commentinput:focus {
    border: 4px solid #589fb4;
}

/* page numbers */

div.pages {
    text-align: center;
}

div.pageno {
    display: inline-block;
    vertical-align: top;
    margin-left: 16px;
    width: 20px;
    height: 20px;
    padding: 14px;
    background-color: #444444;
    border: 2px solid #646464;
    border-radius: 10px;
    text-align: center;
}

div.pageno:active, div.pageno:hover {
    background-color: #333333;
    border-color: #444444;
}

div.current {
    background-color: #383838;
}

a.pageno:link, a.pageno:visited {
    color: #dddddd;
    text-decoration: none;
}

/* ========================= */
/*           forms           */
/* ========================= */

div.form {
    min-width: 210px;
    width: min-content;
    padding: 10px 40px 40px 40px;
    text-align: center;
    background-color: #383838;
    border: 5px solid #646464;
    border-radius: 10px;
    margin-left: auto;
    margin-right: auto;
}

@media screen and (-webkit-min-device-pixel-ratio:0) {
    button.submitbtn {
        width: 194px;
        height: 21px;
    }
}

@-moz-document url-prefix() {
    button.submitbtn {
        width: 200px;
        height: 25px;
    }
}

input.forminput {
    width: 184px;
}

div.small {
    font-size: 14px;
}

a:link, a:visited {
    color: #394dff;
    text-decoration: underline;
}
a:hover, a:active {
    color: #7482ff;
}

/* ========================= */
/*       add post page       */
/* ========================= */

div.postviewport {
    width: 98%;
    margin-left: auto;
    margin-right: auto;
}

div.postmain, div.userimages, div.overlays {
    padding: 10px 10px;
    background-color: #383838;
    border: 5px solid #646464;
    border-radius: 10px;
}

/* Upload image section */

div.postmain {
    float: left;
    margin-left: 30px;
    margin-right: 30px;
    margin-bottom: 30px;
    width: 800px;
    height: 1270px;
}

div#wc-overlays {
    width: 100%;
    height: 0px;
}

img.wc-overlay {
    display: block;
    position: absolute;
    margin-right: 0px;
    margin-top: 10px;
    margin-bottom: 0px;
    max-height: 75%;
    max-width: 160px;
}

video#videoElement {
    max-width: 100%;
    height: 450px;
}

img#captureImage {
    max-width: 100%;
    height: 450px;
}

/* user images */

div.userimages {
    float: left;
    width: 200px;
    height: 1270px;
    text-align: center;
    overflow: auto;
}

div.userimage {
    margin-bottom: 5px;
    width: 100%;
}

img.userimage {
    display: block;
    margin-left: auto;
    margin-right: auto;
    max-width: 100%;
    max-height: 200px;
}

div.postdate {
    font-size: 10px;
    color: dimgray;
}

button.select, button.delete {
    width: 70px;
}

/* overlays */

div.overlays {
    float: left;
    margin-left: 30px;
    width: 1060px;
    height: 200px;
    overflow: auto;
}

img.overlay {
    /* display: block; */
    margin-left: 0px;
    margin-right: 0px;
    max-height: 75%;
    max-width: 160px;
}

